--- a/dashboard.html
+++ b/dashboard.html
@@ -16,6 +16,7 @@
     <script src="js/common/constants.js"></script>
     <script src="js/common/api.js"></script>
     <script src="js/common/helpers.js"></script>
+    <script src="js/common/menu_helper.js"></script>
     <script type="text/javascript">
         var helperData = {
             loggedIn: false
@@ -23,12 +24,13 @@
         $.handlebars({
             templatePath: 'templates',
             templateExtension: 'html',
-            partialPath: 'templates/partials/main',
+            partialPath: 'templates/partials/dashboard',
             partialExtension: 'html',
-            partials: ['navbar', 'header', 'services', 'portfolio', 'about', 'pricing', 'contact', 'auth', 'login', 'register', 'footer', 'portfolio-models']
+            partials: ['navbar', 'topmenu', 'messagemenu', 'alertmenu', 'usermenu', 'sidemenu', 'page', 'header', 'cards', 'tile', 'footer']
         });
         if(API_HELPER.testToken()){
             helperData.loggedIn = true;
+            helperData.loggedInUser = API_HELPER.getLoggedInUser();
         }   
     </script>
 
@@ -43,7 +45,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="css/main/style.min.css" rel="stylesheet">
+    <link href="css/dashboard/style.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -54,28 +56,24 @@
 
 </head>
 
-<body id="page-top">
-    <div id="contentWrapper">
+<body>
+    <div id="wrapper">
         Loading....
     </div>  
 
-    <!-- Tether -->
+    <!-- Tether - used for bootstrap tooltips -->
     <script src="vendor/tether/tether.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="vendor/jquery-plugins/jqBootstrapValidation.js"></script>
-
     <script type="text/javascript">
         $.ajaxPrefilter(function( options, original_Options, jqXHR ) {
             options.async = true;
         });
-        $('#contentWrapper').render('dashboard', helperData);
+        helperData.pageHeading = 'Dashboard';
+        helperData.pageSubHeading = 'Dashboard';
+        $('#wrapper').render('dashboard', helperData);
     </script>
 </body>
 </html>
