--- a/dashboard.html
+++ b/dashboard.html
@@ -22,9 +22,9 @@
             loggedIn: false
         }; 
         $.handlebars({
-            templatePath: 'templates',
+            templatePath: 'templates/dashboard',
             templateExtension: 'html',
-            partialPath: 'templates/partials/dashboard',
+            partialPath: 'templates/dashboard/partials',
             partialExtension: 'html',
             partials: ['navbar', 'topmenu', 'messagemenu', 'alertmenu', 'usermenu', 'sidemenu', 'content', 'header', 'cards', 'tile', 'footer']
         });
