--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             loggedIn: false
         };         
         $.handlebars({
-            templatePath: 'templates',
+            templatePath: 'templates/main',
             templateExtension: 'html',
-            partialPath: 'templates/partials/main',
+            partialPath: 'templates/main/partials',
             partialExtension: 'html',
             partials: ['navbar', 'header', 'services', 'portfolio', 'about', 'pricing', 'contact', 'auth', 'login', 'register', 'footer', 'portfolio-models']
         });
