--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,8 @@
     <script src="vendor/handlebars/handlebars-1.0.0.js"></script>
     <script src="vendor/handlebars/jquery-plugin-hbs.js"></script>
     <script src="js/common/constants.js"></script>
+    <script src="js/common/storage.js"></script>
+    <script src="js/common/utils.js"></script>
     <script src="js/common/api.js"></script>
     <script src="js/common/helpers.js"></script>
     <script src="js/common/menu_helper.js"></script>
