--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,10 @@
     
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker3.standalone.min.css" rel="stylesheet">
+    <!-- glyphicons - for alpaca -->
+    <link href="vendor/glyphicons/glyphicons.css" rel="stylesheet">
+    <!-- Bootstrap Date TIME picker- for alpaca -->
+    <link href="vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
 
     <!-- Font awesome & Google Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">    
@@ -22,22 +25,22 @@
     <!-- Our Theme CSS -->
     <link href="css/dashboard/style.min.css" rel="stylesheet">
 
-     <script type="text/javascript" src="node_modules/moment/min/moment-with-locales.min.js"></script> 
-
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
     <!-- Tether - used for bootstrap tooltips -->
     <script src="vendor/tether/tether.min.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-      <script src="node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script> 
+
+    <!-- Moment -->
+    <script type="text/javascript" src="vendor/moment/moment-with-locales.min.js"></script> 
+    <!-- Bootstrap Date TIME picker- for alpaca -->
+    <script src="vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script> 
 
      <!-- handlebars 
     <script src="vendor/handlebars/handlebars-1.0.0.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>    
-
     <!-- jquery handlebars plugin -->
     <script src="vendor/handlebars/jquery-plugin-hbs.js"></script>
 
