--- a/dashboard.html
+++ b/dashboard.html
@@ -25,32 +25,33 @@
     <!-- Our Theme CSS -->
     <link href="css/dashboard/style.min.css" rel="stylesheet">
 
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- jQuery 1.12.4 not the latest - used to support Date TIME Picker - Rework on this-->
+    <!-- https://blog.jquery.com/2016/09/22/jquery-3-1-1-released/   get different jquery versions from the left side bar-->
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.12.4.min.js"></script>
 
     <!-- Tether - used for bootstrap tooltips -->
-    <script src="vendor/tether/tether.min.js"></script>
+    <script type="text/javascript" src="vendor/tether/tether.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Moment -->
     <script type="text/javascript" src="vendor/moment/moment-with-locales.min.js"></script> 
     <!-- Bootstrap Date TIME picker- for alpaca -->
-    <script src="vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script> 
+    <script type="text/javascript" src="vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script> 
 
      <!-- handlebars 
     <script src="vendor/handlebars/handlebars-1.0.0.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>    
     <!-- jquery handlebars plugin -->
-    <script src="vendor/handlebars/jquery-plugin-hbs.js"></script>
+    <script type="text/javascript" src="vendor/handlebars/jquery-plugin-hbs.js"></script>
 
     <!-- self libs -->
-    <script src="js/common/constants.js"></script>
-    <script src="js/common/storage.js"></script>
-    <script src="js/common/utils.js"></script>
-    <script src="js/common/api.js"></script>
-    <script src="js/common/helpers.js"></script>
-    <script src="js/common/menu_helper.js"></script>
+    <script type="text/javascript" src="js/common/constants.js"></script>
+    <script type="text/javascript" src="js/common/storage.js"></script>
+    <script type="text/javascript" src="js/common/utils.js"></script>
+    <script type="text/javascript" src="js/common/api.js"></script>
+    <script type="text/javascript" src="js/common/helpers.js"></script>
+    <script type="text/javascript" src="js/common/menu_helper.js"></script>
     
     <script type="text/javascript">
         MODULE_DATA = {
