--- a/dashboard.html
+++ b/dashboard.html
@@ -23,6 +23,9 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
+    <!-- bootstrap multi select -->
+    <link href="http://www.alpacajs.org/lib/bootstrap-multiselect/css/bootstrap-multiselect.css" rel="stylesheet">
+    
     <!-- Our Theme CSS -->
     <link href="css/dashboard/style.min.css" rel="stylesheet">
 
@@ -39,7 +42,11 @@
     <script type="text/javascript" src="vendor/moment/moment-with-locales.min.js"></script>
     <!-- Bootstrap Date TIME picker- for alpaca -->
     <script type="text/javascript" src="vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
-
+    <!-- phone masking -->
+    <script type="text/javascript" src="http://www.alpacajs.org/lib/jquery-maskedinput/dist/jquery.maskedinput.min.js"></script>
+    <!-- multi select -->
+    <script type="text/javascript" src="http://www.alpacajs.org/lib/bootstrap-multiselect/js/bootstrap-multiselect.js"></script>
+    
     <!-- handlebars 
     <script src="vendor/handlebars/handlebars-1.0.0.js"></script> -->
     <script type="text/javascript" src="vendor/handlebars/handlebars-4.0.6.min.js"></script>
@@ -85,7 +92,7 @@
 
 <!-- alpaca -->
 <link type="text/css" href="vendor/alpaca/alpaca.min.css" rel="stylesheet" />
-<script type="text/javascript" src="vendor/alpaca/alpaca.min.js"></script>
+<script type="text/javascript" src="vendor/alpaca/alpaca.js"></script>
 
 </head>
 
