--- a/compile-module-template.html
+++ b/compile-module-template.html
@@ -1,10 +1,14 @@
+{{{{raw-helper}}}}
 <style>
 <!-- inject:css -->
 <!-- endinject -->
 </style>
+{{{{/raw-helper}}}}
 <!-- inject:html -->
 <!-- endinject -->
+{{{{raw-helper}}}}
 <script type="text/javascript">
     <!-- inject:js -->
     <!-- endinject -->
 </script>
+{{{{/raw-helper}}}}
