--- a/dashboard.html
+++ b/dashboard.html
@@ -70,7 +70,7 @@
         MODULE_DATA = {
             loggedIn: false
         };
-        var partials = ['navbar', 'topmenu', 'messagemenu', 'alertmenu', 'usermenu', 'sidemenu', 'header', 'loading', 'cards', 'tile', 'footer'];
+        var partials = ['navbar', 'topmenu', 'messagemenu', 'alertmenu', 'usermenu', 'sidemenu', 'header', 'loading', 'cards', 'tile', 'footer', 'grid'];
         partials.push(MENU_HELPER.getHomePageByLocation(true));
         $.handlebars({
             templatePath: 'templates/dashboard',
