--- a/dashboard.html
+++ b/dashboard.html
@@ -71,7 +71,7 @@
         MODULE_DATA = {
             loggedIn: false
         };
-        var partials = ['navbar', 'topmenu', 'messagemenu', 'alertmenu', 'usermenu', 'sidemenu', 'header', 'loading', 'cards', 'tile', 'footer', 'grid', 'griddata', 'pager', 'gridsort'];
+        var partials = ['navbar', 'topmenu', 'messagemenu', 'alertmenu', 'usermenu', 'sidemenu', 'header', 'loading', 'cards', 'tile', 'footer', 'grid', 'griddata', 'pager', 'gridsort', 'griddefaultfilters'];
         partials.push(MENU_HELPER.getHomePageByLocation(true));
         $.handlebars({
             templatePath: 'templates/dashboard',
