--- a/dashboard.html
+++ b/dashboard.html
@@ -67,6 +67,10 @@
     <script type="text/javascript" src="js/common/alpaca.js"></script>
     <script type="text/javascript" src="js/common/grid_helper.js"></script>
 
+    <!-- fine uploader -->
+    <script src="vendor/fine-uploader/fine-uploader.min.js"></script>
+
+
     <script type="text/javascript">
         MODULE_DATA = {
             loggedIn: false
