callcenter user changes

--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
     <title>Trips & Trucks - New Era in Goods Transportation</title>
 
+
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- glyphicons - for alpaca -->
@@ -69,6 +70,8 @@
 
     <!-- fine uploader -->
     <script src="vendor/fine-uploader/fine-uploader.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.10.5/bloodhound.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.10.5/typeahead.bundle.min.js"></script>
 
 
     <script type="text/javascript">
@@ -104,6 +107,8 @@
     <div id="wrapper">
         Loading....
     </div>
+
+    
     <script type="text/javascript">
         $.ajaxPrefilter(function (options, original_Options, jqXHR) {
             options.async = true;
