date format fixes,viewasuser ui changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/moment/moment-with-locales.min.js"></script>
     <script src="vendor/handlebars/handlebars-1.0.0.js"></script>
     <script src="vendor/handlebars/jquery-plugin-hbs.js"></script>
     <script src="js/common/constants.js"></script>
